[package]
name = "item-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }
blake3 = { version = "1.8.1" }
time = { version = "0.3.41", features = ["local-offset", "macros", "formatting"] }